Fix problem with mat-form-field width on smaller devices

--- a/src/app/dashboard/add-offer/add-offer.component.scss
+++ b/src/app/dashboard/add-offer/add-offer.component.scss
@@ -33,6 +33,11 @@ mat-checkbox {
     }
   }
 
+  mat-form-field {
+    margin-right: 0;
+    width: 100%;
+  }
+
   .flex {
     flex-direction: column;
   }
